# kortly-pokemon-api

./: .coveragerc  .dockerignore  .env.example  .gitignore  .htpasswd  401.html  CLEANUP_PLAN.md  CLOUD_RUN_DEPLOYMENT.md  DEPLOYMENT.md  Dockerfile  Dockerfile.cloudrun  IMPROVE_DOCS.md  README.md  TEST_COVERAGE_PLAN.md  TEST_IMPROVEMENT.md  cloudbuild.yaml  debug_prices.py  deploy-to-cloud-run.sh  docker-compose.api-only.yml  docker-compose.prod.yml  docker-compose.yml  fake_slack_webhook.py  list_gemini_models.py  nginx.cloudrun.conf  nginx.conf  pyproject.toml  retest_report_new.html  simple_accuracy_tester.py  supervisord.conf  test_base64.txt  test_prices.py  test_qol.py  test_request.json  test_startup.py  test_webhook.py
deployment/cloud-run/: deploy.sh  service.yaml
deployment/examples/: client-service-example.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
specs/: finish_mvp.md  non_english_prd.md  prd6.txt  prd7.txt  prd8.txt
src/scanner/: config.py  main.py
src/scanner/middleware/: __init__.py  security.py
test_results/: accuracy_report_20250611_135937.html  accuracy_report_20250611_143129.html  raw_results.json  test_state.json
test_results/images/: IMG_5400.HEIC  IMG_5401.HEIC  IMG_5402.HEIC  IMG_5403.HEIC  IMG_5404.HEIC
tests/: accuracy_tester.py  conftest.py  test_basic.py
tests/unit/: __init__.py
tests/utils/: __init__.py  api_client.py  image_processor.py  report_generator.py  stats_analyzer.py
web/: index.html  script.js  script_simple.js  style.css  style_simple.css
(+62 files in other folders)
