[project]
name = "pokemon-card-scanner"
version = "1.0.0"
description = "Production-ready Pokemon card scanner using Gemini AI and Pokemon TCG API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.0",
    "httpx>=0.28.1",
    "pillow>=11.2.1",
    "pillow-heif>=0.18.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.12",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]